Refactor -> getFirst() instead of get(0)
* Remove @Autowired and useless comments.

* Refactor -> getFirst() instead of get(0)